<?xml version="1.0"?>
<package>
    <name>merbots_ibvs</name>
    <version>0.1.0</version>
    <description>SRV package for image-based visual servoing</description>
    <author email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</author>
    <maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>
    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>auv_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>merbots_tracking</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>auv_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>merbots_tracking</run_depend>

    <export>
      <nodelet plugin="${prefix}/ibvs_nodelet.xml" />
    </export>
</package>
